--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/L_TaskLevel.L_TaskLevel
 EditorStartupMap=/Game/Maps/L_TaskLevel.L_TaskLevel
+GlobalDefaultGameMode=/Game/Blueprints/BP_TaskGameMode.BP_TaskGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
